[gd_scene format=3 uid="uid://cl5i111tsbw42"]

[ext_resource type="Script" uid="uid://cm12tr2o45oa7" path="res://scripts/pipes.gd" id="1_f17p0"]
[ext_resource type="Texture2D" uid="uid://dqcgu245dciai" path="res://assets/utah-pipes.png" id="2_3ahhd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jyhfs"]
size = Vector2(50, 500)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f17p0"]
size = Vector2(50, 148)

[node name="pipes" type="Node2D" unique_id=1483097776]
script = ExtResource("1_f17p0")

[node name="top_pipe" type="Area2D" parent="." unique_id=1152217968]

[node name="Sprite2D" type="Sprite2D" parent="top_pipe" unique_id=2091696714]
texture = ExtResource("2_3ahhd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="top_pipe" unique_id=1029376706]
shape = SubResource("RectangleShape2D_jyhfs")

[node name="bottom_pipe" type="Area2D" parent="." unique_id=1420974384]
position = Vector2(0, 648)

[node name="Sprite2D" type="Sprite2D" parent="bottom_pipe" unique_id=1383156942]
texture = ExtResource("2_3ahhd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="bottom_pipe" unique_id=1902058555]
shape = SubResource("RectangleShape2D_jyhfs")

[node name="Area2D" type="Area2D" parent="." unique_id=1562347195]
position = Vector2(0, 324)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" unique_id=1597680144]
shape = SubResource("RectangleShape2D_f17p0")

[connection signal="body_entered" from="top_pipe" to="." method="_on_top_pipe_body_entered"]
[connection signal="body_entered" from="bottom_pipe" to="." method="_on_bottom_pipe_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
